Fix vertical alignment of choices in multiple choice questions. Closes #108.

--- a/scss/_anim_check.scss
+++ b/scss/_anim_check.scss
@@ -17,7 +17,7 @@
 }
 .ac-custom li {
 	margin: 0 auto;
-	padding: 0.2em 0;
+	padding: 0.6em 0;
 	position: relative;
 }
 
