--- a/scss/_ru_tabs.scss
+++ b/scss/_ru_tabs.scss
@@ -118,6 +118,7 @@
 .tabs-content.ru_tabs.ru-answer .content * p, .tabs-content.ru_tabs.ru-answer .content * li
 {
     font-size: 1.1rem;
+    margin-bottom: 0;
 }
 
 .tabs-content.ru_tabs.ru-answer .content.ru-answer
